@@ -166,8 +166,11 @@ Trunk -  Unreleased
     HIVE-1935 set hive.security.authorization.createtable.owner.grants to null
     by default (He Yongqiang via namit)
 
-   HIVE-1936 hive.semantic.analyzer.hook cannot have multiple values
-   (Siying Dong via namit)
+    HIVE-1936 hive.semantic.analyzer.hook cannot have multiple values
+    (Siying Dong via namit)
+
+    HIVE-1956 Provide DFS initialization script for Hive
+    (Bruno Mahe via namit)
 
   IMPROVEMENTS
 
